--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migration:revert": "ts-node-dev ./node_modules/typeorm/cli migration:revert -d \"./src/database/runMigrations.ts\" "
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -19,6 +20,7 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "typescript": "^4.6.4"
