--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "method-override": "^3.0.0",
+    "nunjucks": "^3.2.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.8",
@@ -22,7 +25,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/method-override": "^0.0.32",
     "@types/node": "^17.0.34",
+    "@types/nunjucks": "^3.2.1",
     "typescript": "^4.6.4"
   }
 }
