--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "migration:revert": "ts-node-dev ./node_modules/typeorm/cli migration:revert -d \"./src/database/runMigrations.ts\" "
   },
   "dependencies": {
+    "aws-sdk": "^2.1143.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "method-override": "^3.0.0",
+    "nodemailer": "^6.7.5",
     "nunjucks": "^3.2.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
