--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1143.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
@@ -24,14 +25,17 @@
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/method-override": "^0.0.32",
     "@types/node": "^17.0.34",
+    "@types/nodemailer": "^6.4.4",
     "@types/nunjucks": "^3.2.1",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.6.4"
   }
 }
