--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "nodemailer": "^6.7.5",
     "nunjucks": "^3.2.3",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/method-override": "^0.0.32",
     "@types/node": "^17.0.34",
     "@types/nodemailer": "^6.4.4",
